--- a/julia/index.html
+++ b/julia/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -18,9 +19,9 @@
     </header>
        <section class="Time">
         <div class="Time-div-conteudo">
-            <h2 class="Time-titulo">Sobre o Time</h2>
-            <p class="Time-texto-um">O ano de 1924 está marcado na história do futebol paranaense. O esporte começava a ganhar certa notoriedade no cenário regional. Em 1923, após problemas com dívidas e vagas, a diretoria do América resolveu abrir mão do Estadual como forma de protesto. Foi ai que surgiu a ideia de convidar o presidente do Internacional, Arcésio Guimarães, para unificar os dois times e criar uma nova potência no futebol paranaense.</p>
-            <p class="Time-texto-dois">Um ano e muitas reuniões depois, as duas diretorias conseguiram entrar em acordo quanto a cor do uniforme do novo time e deram o aperto de mão final que selou a união de América e Internacional. Surgia o maior clube de futebol do Paraná, o Clube Atlético Paranaense, fundado em 26 de março de 1924.</p>
+            <h2 class="Time-titulo">Sobre o jogo</h2>
+            <p class="Time-texto-um">The Last of Us é uma franquia de jogos eletrônicos de ação-aventura e survival horror exclusiva da PlayStation, criada por Neil Druckmann. A franquia é situada em um mundo pós-apocalíptico, com seres humanos hostis e criaturas canibais infectadas por uma mutação do fungo cordyceps.</p>
+            <p class="Time-texto-dois">O desenvolvimento de The Last of Us começou em 2009 logo depois da finalização de Uncharted 2: Among Thieves, o título anterior da Naughty Dog. A relação entre Joel e Ellie foi o foco central do jogo, com todos os outros elementos de história e jogabilidade desenvolvendo-se ao seu redor. </p>
         </div>
         <img class="time-imagem" src="athletico-paranaense.png" alt="Escudo do Atlético">
      </section>
@@ -31,7 +32,7 @@
         <div class="Jogadores-div">
             <img class="Jogadores-imagem" src="Bento.png" alt="Foto do Bento">
             <h3 class="Jogadores-nome">Bento</h3>
-            <a href="https://github.com/ProfessorAlessandromartinsdelima2103/Site-escola"><img class="Jogador-icone" src="github.png" alt="icone github"></a>
+            <a href="https://github.com/gabihju/projetoescola/tree/main/julia"><img class="Jogador-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.athletico.com.br/"><img class="Jogador-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/bento_matheus/"><img class="Jogador-icone" src="instagram.png" alt="icone instagram"></a>
          </div>
